# jamin

./: .cvsignore  .jamrc  AUTHORS  ChangeLog  Makefile.am  README  TODO  aclocal.m4  autogen.sh  config.h.in  configure.in  jam-ui.glade
controller/: .cvsignore  Makefile.am  jamincont_1912.xml
data/: .cvsignore
examples/: .cvsignore  Makefile.am  RIAA_EQ.jam  default.jam  marble_jamin_ui  marble_jamin_ui.in
pixmaps/: Makefile.am  gold.xpm  hippy.xpm  maori.xpm  play.xpm  stop.xpm
po/: .cvsignore  ChangeLog  POTFILES.in  fr.po  jam.pot  ru.po
src/: .cvsignore  Makefile.am  biquad.h  callbacks.c  callbacks.h  callbacks_help.h  compressor-ui.c  compressor-ui.h  compressor.h  constants.h  db.h  debug.h  fsqrt.h  geq.c  geq.h  gtkmeter.c  gtkmeter.h  gtkmeterscale.c  gtkmeterscale.h  hdeq.c  hdeq.h  help.c  help.h  interface.c  interface.h  intrim.c  intrim.h  io-menu.c  io-menu.h  io.c  io.h  jackstatus.h  jamin-scene.c  jamin.1  jamin.1.in  limiter-ui.c  limiter-ui.h  limiter.h  main.c  main.h  (+28 more)
www/: index.php
www/lib/: template.php
