dnl Process this file with autoconf to produce a configure script.

AC_INIT(configure.in)
AM_INIT_AUTOMAKE(jamin, 0.3.2)
AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC

dnl Checks for libraries.
AC_CHECK_LIB([pthread], [pthread_self], , [AC_MSG_ERROR(You need libpthread installed)])
PKG_CHECK_MODULES(JACK, jack >= 0.50.0)
PKG_CHECK_MODULES(FFTW, fftw3f >= 3.0)
PKG_CHECK_MODULES(XML, libxml-2.0 >= 2.0)
AC_CHECK_LIB([m], [sqrt], , [AC_MSG_ERROR(Can't find libm)])

CFLAGS="$CFLAGS $FFTW_CFLAGS $JACK_CFAGS $XML_CFLAGS"
LIBS="$LIBS $FFTW_LIBS $JACK_LIBS $XML_LIBS"

pkg_modules="gtk+-2.0 >= 1.3.13"
PKG_CHECK_MODULES(PACKAGE, [$pkg_modules])
AC_SUBST(PACKAGE_CFLAGS)
AC_SUBST(PACKAGE_LIBS)

GETTEXT_PACKAGE=jam
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE")

dnl Add the languages which your application supports here.
ALL_LINGUAS=""
AM_GLIB_GNU_GETTEXT

dnl Use -Wall if we have gcc.
changequote(,)dnl
if test "x$GCC" = "xyes"; then
  case " $CFLAGS " in
  *[\ \	]-Wall[\ \	]*) ;;
  *) CFLAGS="$CFLAGS -Wall" ;;
  esac
fi
changequote([,])dnl

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([stdlib.h string.h unistd.h])


# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE

# Checks for library functions.
AC_CHECK_FUNCS([atexit])
AC_CHECK_LIB(jack,jack_is_realtime,
	[AC_DEFINE(HAVE_JACK_IS_REALTIME,,[query JACK realtime mode])],
)


dnl AC_CONFIG_FILES([Makefile src/Makefile po/Makefile.in])
dnl AC_OUTPUT

AC_OUTPUT([
Makefile
src/Makefile
pixmaps/Makefile
po/Makefile.in
])
